compilador.output
Terminals unused in grammar

    ABRE_COLCHETES
    FECHA_COLCHETES
    ABRE_CHAVES
    FECHA_CHAVES
    LABEL
    TYPE
    OF
    GOTO
    ARRAY
    RELACAO
    PROCEDURE
    FUNCTION
    READ
    WRITE
    IF
    THEN
    ELSE
    WHILE
    DO
    OR
    AND
    NOT
    DIV
    MAIS
    MENOS
    ASTERISCO
    BARRA
    IGUAL
    DIFF
    MENOR
    MENOR_IGUAL
    MAIOR
    MAIOR_IGUAL


State 20 conflicts: 2 shift/reduce
State 27 conflicts: 3 shift/reduce
State 35 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: %empty

    7 var: $@3 VAR declara_vars
    8    | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: %empty

   12 $@5: %empty

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   14 tipo: IDENT

   15 lista_id_var: lista_id_var VIRGULA IDENT
   16             | IDENT

   17 lista_idents: lista_idents VIRGULA IDENT
   18             | IDENT

   19 comando_composto: T_BEGIN comandos T_END

   20 comandos: comandos comando
   21         | comando

   22 comando: NUMERO DOIS_PONTOS comando_sem_rotulo
   23        | comando_sem_rotulo

   24 comando_sem_rotulo: atribuicao
   25                   | %empty

   26 atribuicao: IDENT ATRIBUICAO expressao PONTO_E_VIRGULA

   27 expressao: NUMERO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2
    FECHA_PARENTESES (260) 2
    VIRGULA (261) 15 17
    PONTO_E_VIRGULA (262) 2 13 26
    DOIS_PONTOS (263) 13 22
    PONTO (264) 2
    T_BEGIN (265) 19
    T_END (266) 19
    VAR (267) 7
    IDENT (268) 2 14 15 16 17 18 26
    ATRIBUICAO (269) 26
    ABRE_COLCHETES (270)
    FECHA_COLCHETES (271)
    ABRE_CHAVES (272)
    FECHA_CHAVES (273)
    LABEL (274)
    TYPE (275)
    OF (276)
    GOTO (277)
    ARRAY (278)
    RELACAO (279)
    PROCEDURE (280)
    FUNCTION (281)
    READ (282)
    WRITE (283)
    IF (284)
    THEN (285)
    ELSE (286)
    WHILE (287)
    DO (288)
    OR (289)
    AND (290)
    NOT (291)
    DIV (292)
    MAIS (293)
    MENOS (294)
    ASTERISCO (295)
    BARRA (296)
    NUMERO (297) 22 27
    IGUAL (298)
    DIFF (299)
    MENOR (300)
    MENOR_IGUAL (301)
    MAIOR (302)
    MAIOR_IGUAL (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    programa (50)
        on left: 2
        on right: 0
    $@1 (51)
        on left: 1
        on right: 2
    bloco (52)
        on left: 4
        on right: 2
    $@2 (53)
        on left: 3
        on right: 4
    parte_declara_vars (54)
        on left: 5
        on right: 4
    var (55)
        on left: 7 8
        on right: 5
    $@3 (56)
        on left: 6
        on right: 7
    declara_vars (57)
        on left: 9 10
        on right: 7 9
    declara_var (58)
        on left: 13
        on right: 9 10
    $@4 (59)
        on left: 11
        on right: 13
    $@5 (60)
        on left: 12
        on right: 13
    tipo (61)
        on left: 14
        on right: 13
    lista_id_var (62)
        on left: 15 16
        on right: 13 15
    lista_idents (63)
        on left: 17 18
        on right: 2 17
    comando_composto (64)
        on left: 19
        on right: 4
    comandos (65)
        on left: 20 21
        on right: 19 20
    comando (66)
        on left: 22 23
        on right: 20 21
    comando_sem_rotulo (67)
        on left: 24 25
        on right: 22 23
    atribuicao (68)
        on left: 26
        on right: 24
    expressao (69)
        on left: 27
        on right: 26


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   18 lista_idents: IDENT .

    $default  reduce using rule 18 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   17 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   17 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 ($@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@3                 go to state 16


State 12

   17 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 17 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 14

    4 bloco: parte_declara_vars . $@2 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


State 16

    7 var: $@3 . VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 18

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


State 19

    7 var: $@3 VAR . declara_vars

    $default  reduce using rule 11 ($@4)

    declara_vars  go to state 22
    declara_var   go to state 23
    $@4           go to state 24


State 20

   19 comando_composto: T_BEGIN . comandos T_END

    IDENT   shift, and go to state 25
    NUMERO  shift, and go to state 26

    IDENT     [reduce using rule 25 (comando_sem_rotulo)]
    NUMERO    [reduce using rule 25 (comando_sem_rotulo)]
    $default  reduce using rule 25 (comando_sem_rotulo)

    comandos            go to state 27
    comando             go to state 28
    comando_sem_rotulo  go to state 29
    atribuicao          go to state 30


State 21

    4 bloco: parte_declara_vars $@2 comando_composto .

    $default  reduce using rule 4 (bloco)


State 22

    7 var: $@3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 11 ($@4)
    $default  reduce using rule 7 (var)

    declara_var  go to state 31
    $@4          go to state 24


State 23

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


State 24

   13 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 32

    lista_id_var  go to state 33


State 25

   26 atribuicao: IDENT . ATRIBUICAO expressao PONTO_E_VIRGULA

    ATRIBUICAO  shift, and go to state 34


State 26

   22 comando: NUMERO . DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  shift, and go to state 35


State 27

   19 comando_composto: T_BEGIN comandos . T_END
   20 comandos: comandos . comando

    T_END   shift, and go to state 36
    IDENT   shift, and go to state 25
    NUMERO  shift, and go to state 26

    T_END   [reduce using rule 25 (comando_sem_rotulo)]
    IDENT   [reduce using rule 25 (comando_sem_rotulo)]
    NUMERO  [reduce using rule 25 (comando_sem_rotulo)]

    comando             go to state 37
    comando_sem_rotulo  go to state 29
    atribuicao          go to state 30


State 28

   21 comandos: comando .

    $default  reduce using rule 21 (comandos)


State 29

   23 comando: comando_sem_rotulo .

    $default  reduce using rule 23 (comando)


State 30

   24 comando_sem_rotulo: atribuicao .

    $default  reduce using rule 24 (comando_sem_rotulo)


State 31

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


State 32

   16 lista_id_var: IDENT .

    $default  reduce using rule 16 (lista_id_var)


State 33

   13 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   15 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 38
    DOIS_PONTOS  shift, and go to state 39


State 34

   26 atribuicao: IDENT ATRIBUICAO . expressao PONTO_E_VIRGULA

    NUMERO  shift, and go to state 40

    expressao  go to state 41


State 35

   22 comando: NUMERO DOIS_PONTOS . comando_sem_rotulo

    IDENT  shift, and go to state 25

    IDENT     [reduce using rule 25 (comando_sem_rotulo)]
    $default  reduce using rule 25 (comando_sem_rotulo)

    comando_sem_rotulo  go to state 42
    atribuicao          go to state 30


State 36

   19 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 19 (comando_composto)


State 37

   20 comandos: comandos comando .

    $default  reduce using rule 20 (comandos)


State 38

   15 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 43


State 39

   13 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 44

    tipo  go to state 45


State 40

   27 expressao: NUMERO .

    $default  reduce using rule 27 (expressao)


State 41

   26 atribuicao: IDENT ATRIBUICAO expressao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 46


State 42

   22 comando: NUMERO DOIS_PONTOS comando_sem_rotulo .

    $default  reduce using rule 22 (comando)


State 43

   15 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 15 (lista_id_var)


State 44

   14 tipo: IDENT .

    $default  reduce using rule 14 (tipo)


State 45

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . $@5 PONTO_E_VIRGULA

    $default  reduce using rule 12 ($@5)

    $@5  go to state 47


State 46

   26 atribuicao: IDENT ATRIBUICAO expressao PONTO_E_VIRGULA .

    $default  reduce using rule 26 (atribuicao)


State 47

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 48


State 48

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA .

    $default  reduce using rule 13 (declara_var)
